# TriEngine

./: CMakeLists.txt  GetDXC.ps1  README.md  TriEngine.sln
ContentTools/: ContentTools.vcxproj  FbxImporter.cpp  FbxImporter.h  Geometry.cpp  Geometry.h  PrimitiveMesh.cpp  PrimitiveMesh.h
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/Common/: CommonHeaders.h  Id.h  PrimitiveTypes.h
Engine/Components/: Entity.cpp  Entity.h  Script.cpp  Script.h  Transform.cpp  Transform.h
Engine/Content/: ContentLoader.cpp  ContentLoader.h  ContentLoaderWin32.cpp  ContentToEngine.cpp  ContentToEngine.h
Engine/Core/: Engine.cpp  EngineWin32.cpp  Main.cpp  MainWin32.cpp
Engine/Engine.tlog/: CL.13472.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  Engine.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Engine/EngineAPI/: Camera.h  GameEntity.h  ScriptComponent.h  TransformComponent.h
Engine/Graphics/: GraphicsPlatformInterface.h  Renderer.cpp  Renderer.h
Engine/Platform/: Platform.cpp  Platform.h  PlatformTypes.h  PlatformWin32.cpp  Window.cpp  Window.h  includeWindowCpp.h
Engine/Utilities/: FreeList.h  IOStream.h  Math.h  MathTypes.h  Utilities.h  Vector.h
EngineDLL/: DllMain.cpp  EngineAPI.cpp  EngineDLL.vcxproj  EntityAPI.cpp
EngineTest/: EngineTest.vcxproj  EngineTest.vcxproj.filters  Main.cpp  RenderItem.cpp  ShaderCompilation.cpp  ShaderCompilation.h  Test.h  TestEntityComponents.h  TestRenderer.cpp  TestShader.hlsl  TestWindow.h
TriEngineEditor/: App.xaml  App.xaml.cs  EnginePathDialog.xaml  EnginePathDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TriEngineEditor - Backup (1).csproj  TriEngineEditor - Backup.csproj  TriEngineEditor.csproj
TriEngineEditor/Common/: Helpers.cs  RelayCommand.cs  ViewModelBase.cs
TriEngineEditor/Components/: Component.cs  ComponentFactory.cs  GameEntity.cs  Script.cs  Transform.cs
TriEngineEditor/Content/: Asset.cs  Geometry.cs  (+4 more)
(+97 files in other folders)
